fix: spacing bug for mobiles in results-message

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,6 @@ h2 {
     height: 6rem;
     display: flex;
     justify-content: space-evenly;
-    margin: 0 1rem 1rem;
 }
 
 .table {
@@ -105,12 +104,12 @@ h2 {
 #results-message {
     display: flex;
     align-items: center;
-    justify-content: center;
+    text-align: center;
     color: rgb(202, 154, 96);
     height: 6rem;
-    font-size: 1rem;
-    margin: 0 2rem 1rem;
-    padding: 1rem;
+    font-size: 1.3rem;
+    margin: 0 auto 1rem;
+    padding: 0 1rem 1rem;
 }
 
 #tally-area {
